feat: Update branding to reflect "Bridging Business & Technology" across README, index, and manifest files

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "TheGeeksInfo - Bridging Classroom & Industry",
+    "name": "TheGeeksInfo - Bridging Business & Technology",
     "short_name": "TheGeeksInfo",
     "description": "Innovative software engineering services and education that bridges the gap between classroom and industry",
     "start_url": "/",
